syntax = "proto3";

package rpc;
option go_package = "./;rpc";

service CNIIpam {
	rpc Ping (PingRequest) returns (PingResponse) {}
	rpc AddPodNetwork (AddPodNetworkRequest) returns (AddPodNetworkResponse) {}
	rpc DelPodNetwork (DelPodNetworkRequest) returns (DelPodNetworkResponse) {}
	rpc AddPodNetworkRecord (AddPodNetworkRecordRequest) returns (AddPodNetworkRecordResponse) {}
	rpc DelPodNetworkRecord (DelPodNetworkRecordRequest) returns (DelPodNetworkRecordResponse) {}
	rpc GetPodNetworkRecord (GetPodNetworkRecordRequest) returns (GetPodNetworkRecordResponse) {}
	rpc ListPodNetworkRecord (ListPodNetworkRecordRequest) returns (ListPodNetworkRecordResponse) {}

	rpc BorrowIP(BorrowIPRequest) returns (BorrowIPResponse) {}

	rpc AddPoolRecord (AddPoolRecordRequest) returns (AddPoolRecordResponse) {}
	rpc ListPoolRecord (ListPoolRecordRequest) returns (ListPoolRecordResponse) {}
}

message PingRequest {}

message PingResponse {}

message AddPodNetworkRequest {
	string PodName = 1;
	string PodNamespace = 2;
	string SandboxID = 3;
	string Netns = 4;
	string IfName = 5;
}


message AddPodNetworkResponse{
	CNIErrorCode Code = 1;
	PodNetwork PodNetwork =2;
}

message DelPodNetworkRequest {
	PodNetwork PodNetwork = 1;
}

message DelPodNetworkResponse {
	CNIErrorCode Code = 1;
}

message AddPodNetworkRecordRequest {
	PodNetwork PodNetwork = 1;
}

message AddPodNetworkRecordResponse {
	CNIErrorCode Code = 1;
}

message DelPodNetworkRecordRequest {
	string PodName = 1;
	string PodNS = 2;
	string SandboxID = 3;
}

message DelPodNetworkRecordResponse {
	CNIErrorCode Code = 1;
}

message GetPodNetworkRecordRequest {
	string PodName = 1;
	string PodNS = 2;
	string SandboxID = 3;
}

message GetPodNetworkRecordResponse {
	CNIErrorCode Code = 1;
	PodNetwork PodNetwork = 2;
}

message PodNetwork {
	string PodName = 1;
	string PodNS = 2;
	string PodUID = 3;
	string SandboxID = 4;
	string NetNS = 5;
	string VPCIP = 6;
	string VPCID = 7;
	string SubnetID = 8;
	string Gateway = 9;
	string Mask = 10;
	string MacAddress = 11;
	bool DedicatedUNI = 12;
	string InterfaceID = 13;
	string EIPID = 14;
	int64 CreateTime = 15;
	int64 RecycleTime = 16;
	bool Recycled = 17;
}

message BorrowIPRequest {
	string MacAddr = 1;
}

message BorrowIPResponse {
	CNIErrorCode Code = 1;
	PodNetwork IP = 2;
}

message ListPodNetworkRecordRequest {}

message ListPodNetworkRecordResponse {
	CNIErrorCode Code = 1;
	repeated PodNetwork Networks = 2;
}

message ListPoolRecordRequest {}

message ListPoolRecordResponse {
	CNIErrorCode Code = 1;

	repeated PoolRecord Pool = 2;
}

message PoolRecord {
	string VPCIP = 1;

	int64 CreateTime = 2;

	int64 RecycleTime = 3;
	bool Recycled = 4;

	bool Cooldown = 5;
}

message AddPoolRecordRequest {
	repeated AddPoolRecord records = 1;
}

message AddPoolRecord {
	string Gateway = 1;
	string IP = 2;
	string Mac = 3;
	string Mask = 4;
	string SubnetID = 5;
	string VPCID = 6;
}

message AddPoolRecordResponse {
	CNIErrorCode Code = 1;
}

enum CNIErrorCode {
	CNISuccess = 0;

	CNIMissingParameters = 1001;

	CNIAllocateSecondaryIPFailure = 1002;
	CNIReleaseSecondaryIPFailure = 1003;

	CNIAllocateEIPFailure = 1004;
	CNIReleaseEIPFailure = 1005;

	CNIBindEIPFailure = 1006;
	CNIUnbindEIPFailure = 1007;

	CNIAllocateUNIFailure = 1008;
	CNIReleaseUNIFailure = 1009;

	CNIAttachUNIFailure = 1010;
	CNIDetachUNIFailure = 1011;

	CNIK8SAPIError = 1012;

	CNIWriteDBError = 1013;
	CNIReadDBError = 1014;

	CNIBorrowIPFailure = 1015;
}
